Fix bug icon break on iPhone 5

--- a/src/pages/Prediction/Prediction.scss
+++ b/src/pages/Prediction/Prediction.scss
@@ -293,8 +293,8 @@
   .share-social  {
     margin-top: 25px;
     img {
-      width: 35px;
-      margin-right: 10px;
+      width: 32px;
+      margin-right: 8px;
     }
   }
 
